@@ -1,4 +1,5 @@
 0.07
+ - Add 'struct' output to angle2zodiac().
 
 0.06 2024-10-17T10:18:26+02:00
  - Add test for 'second_round'.
